# abinbev_case

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ABI DENG Recrutiment Business Case 1 20210727/: case.md  instrucoes.txt
airflow_local/: airflow.cfg  airflow.db  dags
config/: alert_rules.yml  config.yaml  env.example  governance_policies.yaml  grafana_spark_dashboard.json  prometheus.yml
dags/: abinbev_case_pipeline.py
demo/: 00_demo_presentation.ipynb  README.md  demo_guide.md  quick_analysis.py  setup_demo.sh
docs/: ANALYSIS_REPORT.md  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  DATA_DICTIONARY.md  DEVELOPMENT_JOURNAL.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/airflow/: main.tf  variables.tf
infrastructure/terraform/modules/data_factory/: main.tf  variables.tf
infrastructure/terraform/modules/governance/: main.tf  variables.tf
infrastructure/terraform/modules/hdinsight/: main.tf  variables.tf
infrastructure/terraform/modules/observability/: main.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  variables.tf
notebooks/: 01_bronze_ingestion.py  01_complete_pipeline.py  02_silver_transformation.py  03_gold_business_rules.py  04_consumption_dimensional.py  interactive_queries.ipynb
notebooks/.ipynb_checkpoints/: interactive_queries-checkpoint.ipynb
scripts/: manage_secrets.py  run_pipeline.sh  setup_local.sh  setup_local_airflow.sh
src/config/: secrets.py  settings.py
src/control/: __init__.py  process_control.py  quarantine_manager.py
src/governance/: __init__.py  ingest_metadata.py  openmetadata_client.py
src/transformations/: __init__.py  bronze_layer.py  gold_layer.py  silver_layer.py
tests/: conftest.py  test_transformations.py
